--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   </head>
   <body>
-    HELLO :) HIIIIIIIII
+    <form action="/send" method="post" enctype="multipart/form-data">
+      <input type="file" id="file" name="file" />
+      <input type="submit" value="Upload" />
+    </form>
   </body>
 </html>
