move html to external file + QrComponent

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-
-    <title>Axon</title>
-
-  </head>
-  <body>
-    <form action="/send" method="post" enctype="multipart/form-data">
-      <input type="file" id="file" name="file" />
-      <input type="submit" value="Upload" />
-    </form>
-  </body>
-</html>
+deleting this file breaks everything :(
