improve UI + react render to root element

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,14 @@
-deleting this file breaks everything :(
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Axon node</title>
+  </head>
+  <body>
+    <div id="titlebar" style="height: 30px; app-region: drag;"></div>
+
+    <div id="root" style="margin: 0; padding: 0;"></div>
+
+    <!-- <script src="./renderer.js"></script> -->
+  </body>
+</html>
